Tue Sep 09 16:53:54 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/sql2tds.c: be coherent about constants

Tue Sep 09 16:41:08 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/common.c src/dblib/unittests/common.c:
	* src/odbc/unittests/common.c src/tds/unittests/common.c:
	- allow to override PWD file path using TDSPWDFILE environment

Mon Sep 08 21:21:57 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/utf8.c: test with small column sizes
	* src/tds/query.c: fix column size preparing

Mon Sep  8 13:49:19 EDT 2008	JK Lowden <jklowden@freetds.org>
	* include/cspublic.h fix #define of BLK_VERSION_110 

Thu Sep 04 08:42:56 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/prepare_query.c src/odbc/sql2tds.c:
	- fill on_server.column_size
	* src/odbc/unittests/genparams.c: test for truncation
	* src/tds/query.c: do not send invalid sizes

Mon Sep 01 17:16:05 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/genparams.c:
	- reproduce bug detected by Sebastien Flaesch on column size
	  computation for NVARCHAR

Fri Aug 29 16:18:44 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/genparams.c: update test

Wed Aug 27 09:57:20 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/rowset.c:
	- don't test for cursors if not implemented

Wed Aug 27 09:43:45 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/data.c:
	- don't test nvarchar if Sybase

Wed Aug 27 09:27:49 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/common.c: allow empty password on tests

Tue Aug 26 16:11:05 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/cs.c:
	- applied Andrew Victor patch for unused gmtime result

Fri Aug 22 07:25:58 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/query.c:
	- applied modified patch from Chris Reeves for fix